# Chess-Agents-Simulation

./: .env.example  README.md  pyproject.toml
arena/: __init__.py  boardutil.py  judge.py  match.py  players.py  server.py
arena/static/: app.js  index.html  styles.css
tests/: test_board.py
