[project]
name = "chess-arena"
version = "0.1.0"
description = "Chess Arena — LLM vs LLM chess matches"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "chess>=1.10",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
chess-arena = "arena.server:main"

[tool.setuptools.packages.find]
include = ["arena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
